--- a/filters/karbon/eps/CMakeLists.txt
+++ b/filters/karbon/eps/CMakeLists.txt
@@ -1,8 +1,13 @@
 
-macro_optional_find_package(Pstoedit)
-macro_log_feature(PSTOEDIT_SVG_PLUGIN_FOUND "pstoedit with svg plugin" "Translates PostScript and PDF graphics to SVG" "http://www.pstoedit.net/" FALSE "" "Required at runtime by the Karbon EPS import filter")
+macro_optional_find_package(PstoeditSvgOutput)
+set_package_properties(PstoeditSvgOutput PROPERTIES
+    DESCRIPTION "pstoedit with svg plugin"
+    URL "http://www.pstoedit.net/"
+    PURPOSE "Required at runtime by the Karbon EPS import filter"
+    TYPE RUNTIME
+)
 
-if (PSTOEDIT_SVG_PLUGIN_FOUND)
+if (PstoeditSvgOutput_FOUND)
 
 set(eps2svgai_PART_SRCS EpsImport.cpp PsCommentLexer.cpp )
 
