Fix typo: NOMODULE -> NO_MODULE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,7 +153,7 @@ calligra_set_productset(${PRODUCTSET})
 ###########################
 ##########################
 
-find_package(ECM 1.7.0 REQUIRED NOMODULE)
+find_package(ECM 1.7.0 REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR})
 
 # CMake macros
