pstoedit is a runtime dep, not a buildtime dep for Karbon EPS import filter
So do not skip the build if not found

--- a/filters/karbon/eps/CMakeLists.txt
+++ b/filters/karbon/eps/CMakeLists.txt
@@ -3,11 +3,9 @@ macro_optional_find_package(PstoeditSvgOutput)
 set_package_properties(PstoeditSvgOutput PROPERTIES
     DESCRIPTION "pstoedit with svg plugin"
     URL "http://www.pstoedit.net/"
-    PURPOSE "Required at runtime by the Karbon EPS import filter"
+    PURPOSE "Required at runtime by the calligra_filter_eps2svgai format filter"
     TYPE RUNTIME
 )
-
-if (PstoeditSvgOutput_FOUND)
 
 set(eps2svgai_PART_SRCS EpsImport.cpp PsCommentLexer.cpp )
 
@@ -20,5 +18,3 @@ install(TARGETS calligra_filter_eps2svgai  DESTINATION ${PLUGIN_INSTALL_DIR}/cal
 
 #TODO: restore also importing from PostScript
 #karbon_ps_import.desktop
-
-endif ()
