--- a/libs/main/CMakeLists.txt
+++ b/libs/main/CMakeLists.txt
@@ -120,7 +120,9 @@ install(TARGETS komain ${INSTALL_TARGETS_DEFAULT_ARGS} )
 
 ########### install files ###############
 
-install(FILES calligradocker.desktop DESTINATION ${SERVICETYPES_INSTALL_DIR} )
+# TODO: with the new embedded JSON data for plugins there is no schema ATM to define extended properties
+# calligradocker.desktop
+
 install(FILES calligra_shell.rc DESTINATION ${DATA_INSTALL_DIR}/calligra )
 
 if (APPLE)
