--- a/servicetypes/CMakeLists.txt
+++ b/servicetypes/CMakeLists.txt
@@ -1,11 +1,1 @@
-########### install files ###############
-
-install(
-    FILES
-        calligra_application.desktop
-        calligra_deferred_plugin.desktop
-        calligra_filter.desktop
-        calligra_part.desktop
-    DESTINATION
-        ${SERVICETYPES_INSTALL_DIR}
-)
+# TODO: with the new embedded JSON data for plugins there is no schema ATM to define extended properties
