--- a/stage/data/CMakeLists.txt
+++ b/stage/data/CMakeLists.txt
@@ -1,8 +1,1 @@
-########### install files ###############
-
-install( FILES
-    kpr_pageeffect.desktop
-    kpr_shapeanimation.desktop
-    kpr_tool.desktop
-    DESTINATION ${SERVICETYPES_INSTALL_DIR})
-
+# TODO: with the new embedded JSON data for plugins there is no schema ATM to define extended properties
