--- a/active/CMakeLists.txt
+++ b/active/CMakeLists.txt
@@ -69,4 +69,4 @@ endif()
 
 install(TARGETS calligraactive RUNTIME DESTINATION bin)
 install(FILES calligraactive.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
-install(DIRECTORY qml DESTINATION share/calligraactive)
+install(DIRECTORY qml DESTINATION ${SHARE_INSTALL_PREFIX}/calligraactive)
