--- a/plugins/colorengines/lcms2/data/CMakeLists.txt
+++ b/plugins/colorengines/lcms2/data/CMakeLists.txt
@@ -4,4 +4,4 @@ install(FILES
     scRGB.icm
     cmyk.icm
     krita25_lcms-builtin-sRGB_g100-truegamma.icc
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/share/color/icc/calligra)
+    DESTINATION ${SHARE_INSTALL_PREFIX}/color/icc/calligra)
