Readd accidentally removed search for LCMS2
fixup for 806b7b956895d79fdbb8c708375191c5be23422f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -571,6 +571,7 @@ set_package_properties(Marble PROPERTIES
 ##
 ## Test for lcms
 ##
+macro_optional_find_package(LCMS2)
 set_package_properties(LCMS2 PROPERTIES
     DESCRIPTION "LittleCMS, a color management engine"
     URL "http://www.littlecms.com"
