More work on the odf split, cell and region stuff now

--- a/sheets/CMakeLists.txt
+++ b/sheets/CMakeLists.txt
@@ -151,6 +151,7 @@ set (odf_DIR_SRCS
     odf/SheetsOdfSheet.cpp
     odf/SheetsOdfCell.cpp
     odf/SheetsOdfStyle.cpp
+    odf/SheetsOdfRegion.cpp
     )
 
 set (part_DIR_SRCS
