move conditions to the odf dir

--- a/sheets/CMakeLists.txt
+++ b/sheets/CMakeLists.txt
@@ -152,6 +152,7 @@ set (odf_DIR_SRCS
     odf/SheetsOdfCell.cpp
     odf/SheetsOdfStyle.cpp
     odf/SheetsOdfRegion.cpp
+    odf/SheetsOdfCondition.cpp
     )
 
 set (part_DIR_SRCS
